overflow corrected again

--- a/docs/css/homepage.css
+++ b/docs/css/homepage.css
@@ -15,6 +15,7 @@
 }
 
 body {
+    overflow-x: hidden;
     background-color: #292A28;
 }
 
@@ -113,7 +114,7 @@ footer {
     left: 8px;
 }
 
-@media screen and (max-device-width: 600px) {
+@media screen and (max-width: 600px) {
     html, body {
         overflow-x: hidden;
     }
@@ -134,6 +135,7 @@ footer {
     }
 
     .menu-items a {
+        overflow-x: hidden;
         opacity: 0;
     }
     .hamburger-menu {
